# KATC

./: CMakeLists.txt  README.md  factorization.cpp  factorization.h  nfa.cpp  nfa.h  parikh_mlir.cpp  parikh_mlir.h  regex.cpp  regex.h  semilinear.cpp  semilinear.h  symbolic_equiv.cpp  symbolic_equiv.h  test_factorization  test_factorization.cpp  test_parikh  test_parikh.cpp  test_regex.cpp  test_symbolic_equiv.cpp
